# md9781-manager

./: .gitignore  Makefile  Makefile.in  README  README.md  common.c  common.h  config.h  config.h.in  config.status  configure  configure.in  delete.c  download.c  format.c  libmd9781.h  listfiles.c  md9781-class.cc  md9781-manager.1  md9781-manager.c  playlist.c  test.c  upload.c
debian/: changelog  control  copyright  dirs  rules
lib/: Makefile  Makefile.in  common.c  common.h  delete.c  download.c  libmd9781.h  listfiles.c  playlist.c  upload.c
usb-hotplug/: md9781  md9781.usermap
